--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.min.css">
+    <meta   charset="UTF-8">
+    <meta   name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta   http-equiv="X-UA-Compatible"
+            content="ie=edge">
+
+    <title>Underground</title>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
-<body>
-   <form action="#" method="POST" class="tables">
-   		<div class="tables__item item_1">
-   			<div class="number-table">Первый стол</div>
-   			<div class="signature">
-   				<p class="signature-text">Имя</p>
-   			</div>
-   			<div class="signature">
-   				<p class="signature-text">Время прихода</p>
-   			</div>
-   			<div class="data-visits data_left">
-   				<p class="visits visits-name">Василий</p>
-   			</div>
-   			<div class="data-visits data_right">
-   				<p class="visits visits-time">12:23:13</p>
-   			</div>
-   			<button class="change-data change-data_remove-visits">Убрать</button>
-   			<button class="change-data change-data_add-time">Добавить час</button>
-   		</div>
-   </form>
+<body class="body">
+    <form action="" method="POST" class="popup">
+        <div class="add-visit" >
+            <header class="header_popup">
+                <span class="close_popup"></span>
+            </header>
+            <div class="popup_enter_date">
+                <label for="enter_name" class="popup__name">
+                    <p class="popup__name_text">Введите имя посетителя</p>
+                </label>
+                <div class="enter-name_size">
+                    <input type="text" id="enter_name" class="enter-name">
+                </div>
+            </div>
+            <div class="popup_enter_date">
+                <div class="popup__enter-time">
+                    <label for="enter-time" class="enter-time_message">
+                        <p class="enter-date_text">введите время</p>
+                    </label>
+                    <input type="text" id="enter-time" class="enter_add-time">
+                </div>
+                <div class="enter-date">
+                    <button class="enter-date_click">
+                        <p class="enter-date_text">Подтвердить</p>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <!--Скрипты-->
+    <script src="js/main.min.js"></script>
 </body>
 </html>
