Добавил скрытый span
В него помещается номер стола, в который мы хотим записать посетителя

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body class="body">
     <form action="" method="POST" class="popup">
         <div class="add-visit" >
+        	<span class="none" id="number_table">1</span>
             <header class="header_popup">
                 <span class="close_popup"></span>
             </header>
