--- a/index.html
+++ b/index.html
@@ -1,30 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+    <meta   charset="UTF-8">
+    <meta   name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta   http-equiv="X-UA-Compatible"
+            content="ie=edge">
+
+    <title>Underground</title>
+    
+    <link rel="stylesheet" href="css/header.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/navigation.min.css">
+    <link rel="stylesheet" href="css/table.min.css">
+    <link rel="stylesheet" href="css/popup.min.css">
 </head>
-<body>
-   <form action="#" method="POST" class="tables">
-   		<div class="tables__item item_1">
-   			<div class="number-table">Первый стол</div>
-   			<div class="signature">
-   				<p class="signature-text">Имя</p>
-   			</div>
-   			<div class="signature">
-   				<p class="signature-text">Время прихода</p>
-   			</div>
-   			<div class="data-visits data_left">
-   				<p class="visits visits-name">Василий</p>
-   			</div>
-   			<div class="data-visits data_right">
-   				<p class="visits visits-time">12:23:13</p>
-   			</div>
-   			<button class="change-data change-data_remove-visits">Убрать</button>
-   			<button class="change-data change-data_add-time">Добавить час</button>
-   		</div>
-   </form>
+<body class="body">
+	<!--Наимнование заведения-->
+	<header class="header">
+            <p class = "header_name">
+                 UNDERGROUND
+            </p>  
+    </header>
+    <!--Боковое меню-->
+    <div class="nav" id="nav-js">
+        <!--Пункты меню-->
+        <a href="#1">
+            <div class="nav-item nav-item_register">
+                <div class="nav-item_text">Регистрация</div>
+                <div class="nav-item_label"></div>
+            </div>
+        </a>
+        <a href="#2">
+            <div class="nav-item nav-item_product">
+                <div class="nav-item_text">Товары</div>
+                <div class="nav-item_label"></div>
+            </div>
+        </a> 
+        <a href="#3"> 
+            <div class="nav-item nav-item_prise">
+                <div class="nav-item_text">Цена</div>
+                <div class="nav-item_label"></div>
+            </div>
+        </a>
+
+        <!--Бургер-->
+        <div class="nav__burger">
+            <div class="nav__burger_label"></div>
+        </div>
+    </div>
+    <!--Popup окно-->
+    <div class="add-visit _none js-add-visit">
+    	<span class="_none" id="number_table"></span>
+       	<header class="header_popup">
+       	    <span class="close_popup js-close_popup"></span>
+       	</header>
+       	<div class="popup__enter_date">
+       	    <label for="enter_name" class="popup__name">
+       	        <p class="popup__name_text">Введите имя посетителя</p>
+       	    </label>
+       	    <div class="enter-name_size">
+       	        <input type="text" id="enter_name" class="enter-name">
+       	    </div>
+       	</div>
+       	<div class="popup__enter_date">
+       	    <div class="popup__enter-time">
+       	        <label for="enter-time" class="enter-time_message">
+       	            <p class="enter-date_text">введите время</p>
+       	        </label>
+       	        <input type="number" id="enter_time" class="enter_add-time" min="1" max="10" value="1">
+       	    </div>
+       	    <div class="enter-date">
+       	        <button class="enter-date_click js-enter-date_click">
+       	            <p class="enter-date_text js-enter-date_click">Подтвердить</p>
+       	        </button>
+       	    </div>
+       	</div>
+    </div>
+
+    <!--Основа сайта-->
+    <div class="content js-content">  
+    	<!--Столы-->
+    	<!--Стол1-->
+    	<div class="table_pos">
+			<div class="table table-i table_left js-table" id="table_1">
+				<span class="js-prise_table _none" data-value="500"></span>
+				<div class="table table_cap table_cap__number js-table_cap">
+    				Стол №1
+    			</div>
+				<div class="table__number">
+					<p class="table__number-i">Стол №1</p>
+				</div>
+				<div class="table__info">
+					<div class="table__info-i table__info_left">
+						<div class="table__info_name">
+							<p class="table__info_name-i">Клиент</p>
+						</div>
+						<div class="table__info_value">
+							<span class="table__info_value-i js-table__info_name"></span>
+						</div>
+					</div>
+					<div class="table__info-i table__info_right">
+						<div class="table__info_name">
+							<p class="table__info_name-i">Таймер</p>
+						</div>
+						<div class="table__info_value">
+							<span class="table__info_value-i js-table__info_time" id="table-time_1"></span>
+						</div>
+					</div>
+				</div>
+				<div class="table__change">
+					<div class="table__change-i table__change_extend">
+						<!--<button class="table__change_bth table__extend">
+							<p class="table__change_text">Продлить</p>
+						</button>-->
+                        <div class="table__change_bth table__extend">
+                            <div class="table__change_text table__change_input">
+                                Продлить
+                            </div>
+                            <div class="table__extend_list"></div>
+                        </div>
+					</div>
+					<div class="table__change-i table__change_remove">
+						<button class="table__change_bth table__remove table__change_text js-table__remove">
+							Убрать
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>	
+    <!--Скрипты-->
+    <script type="text/javascript" src="js/clock.min.js"></script>
+    <script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
