--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
     </div>
     <!--Popup окно-->
+    <form action="" method="POST">
     <div class="add-visit _none js-add-visit">
     	<span class="_none" id="number_table"></span>
        	<header class="header_popup">
@@ -78,14 +79,16 @@
        	    </div>
        	</div>
     </div>
+    </form>
 
     <!--Основа сайта-->
     <div class="content js-content">  
     	<!--Столы-->
     	<!--Стол1-->
+        <form action="" method="POST">
     	<div class="table_pos">
 			<div class="table table-i table_left js-table" id="table_1">
-				<span class="js-prise_table _none" data-value="500"></span>
+				<span class="js-prise_table _none" data-value="500" data-hours="0"></span>
 				<div class="table table_cap table_cap__number js-table_cap">
     				Стол №1
     			</div>
@@ -112,15 +115,22 @@
 				</div>
 				<div class="table__change">
 					<div class="table__change-i table__change_extend">
-						<!--<button class="table__change_bth table__extend">
-							<p class="table__change_text">Продлить</p>
-						</button>-->
-                        <div class="table__change_bth table__extend">
-                            <div class="table__change_text table__change_input">
-                                Продлить
-                            </div>
-                            <div class="table__extend_list"></div>
-                        </div>
+						<div class="table__change_bth table__extend">
+							<div class="table__change_text table_cap_extend table__change_back js-table__change_text">
+								Продлить
+							</div>
+							<div class="table__extend_bth js-table__extend_bth">
+								<div class="table__extend_item js-table__extend_item">
+									<button class="table__extend_item-bth js-table__extend_item" data-value="1">на 1 час</button>
+								</div>
+								<div class="table__extend_item js-table__extend_item">
+									<button class="table__extend_item-bth js-table__extend_item" data-value="2">на 2 часа</button>
+								</div>
+								<div class="table__extend_item js-table__extend_item">
+									<button class="table__extend_item-bth js-table__extend_item" data-value="3">на 3 часа</button>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="table__change-i table__change_remove">
 						<button class="table__change_bth table__remove table__change_text js-table__remove">
@@ -130,6 +140,7 @@
 				</div>
 			</div>
 		</div>
+        </form>
 	</div>	
     <!--Скрипты-->
     <script type="text/javascript" src="js/clock.min.js"></script>
