--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!--Popup окно-->
     <form action="" method="POST">
     <div class="add-visit _none js-add-visit">
-    	<span class="_none" id="number_table"></span>
+    	<input class="_none" id="number_table" name="number_table">
        	<header class="header_popup">
        	    <span class="close_popup js-close_popup"></span>
        	</header>
@@ -62,7 +62,7 @@
        	        <p class="popup__name_text">Введите имя посетителя</p>
        	    </label>
        	    <div class="enter-name_size">
-       	        <input type="text" id="enter_name" class="enter-name">
+       	        <input type="text" id="enter_name" class="enter-name" name="name">
        	    </div>
        	</div>
        	<div class="popup__enter_date">
@@ -70,7 +70,7 @@
        	        <label for="enter-time" class="enter-time_message">
        	            <p class="enter-date_text">введите время</p>
        	        </label>
-       	        <input type="number" id="enter_time" class="enter_add-time" min="1" max="10" value="1">
+       	        <input type="number" id="enter_time" class="enter_add-time" min="1" max="10" value="1" name="time">
        	    </div>
        	    <div class="enter-date">
        	        <button class="enter-date_click js-enter-date_click">
